[package]
name = "xandeum-prpc"
version = "0.1.2"
edition = "2021"
description = "Rust client for Xandeum pNode pRPC APIs"
license = "MIT"
repository = "https://github.com/DavidNzube101/xandeum-prpc-rust"
homepage = "https://github.com/DavidNzube101/xandeum-prpc-rust"
documentation = "https://github.com/DavidNzube101/xandeum-prpc-rust/blob/master/examples/get_pods.rs"
readme = "README.md"
keywords = ["Solana", "RPC", "Xandeum", "blockchain", "pNode"]


categories = ["api-bindings", "asynchronous", "web-programming"]
exclude = [
    ".gitignore"
]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
